apollo-federation/src/connectors/json_selection/snapshots/basic_spread_parsing-2.snap
---
source: apollo-federation/src/connectors/json_selection/parser.rs
expression: "selection!(\"...a...b\", spec)"
---
JSONSelection {
    inner: Named(
        SubSelection {
            selections: [
                NamedSelection {
                    prefix: Spread(
                        Some(
                            0..3,
                        ),
                    ),
                    path: PathSelection {
                        path: WithRange {
                            node: Key(
                                WithRange {
                                    node: Field(
                                        "a",
                                    ),
                                    range: Some(
                                        3..4,
                                    ),
                                },
                                WithRange {
                                    node: Empty,
                                    range: Some(
                                        4..4,
                                    ),
                                },
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                    },
                },
                NamedSelection {
                    prefix: Spread(
                        Some(
                            4..7,
                        ),
                    ),
                    path: PathSelection {
                        path: WithRange {
                            node: Key(
                                WithRange {
                                    node: Field(
                                        "b",
                                    ),
                                    range: Some(
                                        7..8,
                                    ),
                                },
                                WithRange {
                                    node: Empty,
                                    range: Some(
                                        8..8,
                                    ),
                                },
                            ),
                            range: Some(
                                7..8,
                            ),
                        },
                    },
                },
            ],
            range: Some(
                0..8,
            ),
        },
    ),
    spec: V0_3,
}
