apollo-federation/src/connectors/json_selection/snapshots/basic_spread_parsing-6.snap
---
source: apollo-federation/src/connectors/json_selection/parser.rs
expression: "selection!(\"...a{b}\", spec)"
---
JSONSelection {
    inner: Named(
        SubSelection {
            selections: [
                NamedSelection {
                    prefix: Spread(
                        Some(
                            0..3,
                        ),
                    ),
                    path: PathSelection {
                        path: WithRange {
                            node: Key(
                                WithRange {
                                    node: Field(
                                        "a",
                                    ),
                                    range: Some(
                                        3..4,
                                    ),
                                },
                                WithRange {
                                    node: Selection(
                                        SubSelection {
                                            selections: [
                                                NamedSelection {
                                                    prefix: None,
                                                    path: PathSelection {
                                                        path: WithRange {
                                                            node: Key(
                                                                WithRange {
                                                                    node: Field(
                                                                        "b",
                                                                    ),
                                                                    range: Some(
                                                                        5..6,
                                                                    ),
                                                                },
                                                                WithRange {
                                                                    node: Empty,
                                                                    range: Some(
                                                                        6..6,
                                                                    ),
                                                                },
                                                            ),
                                                            range: Some(
                                                                5..6,
                                                            ),
                                                        },
                                                    },
                                                },
                                            ],
                                            range: Some(
                                                4..7,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        4..7,
                                    ),
                                },
                            ),
                            range: Some(
                                3..7,
                            ),
                        },
                    },
                },
            ],
            range: Some(
                0..7,
            ),
        },
    ),
    spec: V0_3,
}
