apollo-federation/src/connectors/json_selection/snapshots/error_snapshots-2.snap
---
source: apollo-federation/src/connectors/json_selection/parser.rs
expression: "JSONSelection::parse(\"id $.object\")"
---
Err(
    JSONSelectionParseError {
        message: "Named path selection must either begin with alias or ..., or end with subselection",
        fragment: "$.object",
        offset: 3,
    },
)
